--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://${URL}
+spring.datasource.url=jdbc:mysql://mysql-abudhabi.alwaysdata.net/abudhabi_shoplist
 
-spring.datasource.username=${USERNAME}
+spring.datasource.username=abudhabi
 
-spring.datasource.password=${PASSWORD}
+spring.datasource.password=12345678@2023
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
