--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://mysql-abudhabi.alwaysdata.net/abudhabi_shoplist
+spring.datasource.url=jdbc:mysql://mysql-abudhabi2023.alwaysdata.net/abudhabi2023_shoplist
 
-spring.datasource.username=abudhabi
+spring.datasource.username=322832
 
 spring.datasource.password=12345678@2023
 
