Spring Security + JWT

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,8 +12,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
+
+# App Properties
+jwtSecret= x5$n56Uq#1$4Mn5@C%23
+jwtExpirationMs=86400000
